syntax = 'proto3';

package cache.asset_uploads;

message AssetUpload {
  string url = 1;
}
